# CSA_1_remastered

./: CMakeLists.txt  README.md
Headers/: container.h  functional.h  language.h  objectoriented.h  procedural.h
Sources/: container.cpp  functional.cpp  language.cpp  main.cpp  objectoriented.cpp  procedural.cpp
